feat: remove unuse code & add google ads fake conversion ID

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_GA4_MEASUREMENT_ID=G-0C06Y6DFBV
+VITE_GOOGLE_ADS_ID=AW-1234567890
+VITE_VIEWITEM_CONVERSION_ID=AW-1234567890/Uj7xP9mK2cL8nR4fT6bQ
+VITE_ADDTOCART_CONVERSION_ID=AW-1234567890/Z3qA5wS8eD2xC9vF7gH1
+VITE_BEGINCHECKOUT_CONVERSION_ID=AW-1234567890/M6tN4hB9jL2kP7rW5sY3
+VITE_PURCHASE_CONVERSION_ID=AW-1234567890/G1dX8aV5cZ7mQ3nH6bK9
